--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body>{{ customer.id }}
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" data-beneficiary-id="3732981973146" data-first-name="Andrew" data-last-name="Bogdan"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
